--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'PressStart2P';
-    src: url('/assets/PressStart2P-Regular.ttf');
+    src: url('./assets/PressStart2P-Regular.ttf');
 }
 
 html, 
